# AprilTagSLAM_ROS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
config/: config.yaml  mapping.yaml  rqt.perspective  rviz.rviz  test.txt  test.yaml  track.g2o  track2.g2o  track3.g2o  track_landmark.g2o
config/outdated/: outdated_mapping.yaml
include/: tag_slam.h  tag_slam_zed.h  tag_slam_zed.hpp  utility_function.h  utility_function.hpp
include/backend/: backend.h  backend.hpp  fixed_lag_backend.h  fixed_lag_backend.hpp  fixed_lag_backend_isam.h  isam2_backend.h  isam2_backend.hpp
include/frontend/: tag_detector.h  tag_detector.hpp  tag_detector_cpu.h  tag_detector_cpu.hpp  tag_detector_cuda.h  tag_detector_cuda.hpp
include/unsupported/: unsupported_tag_slam.h
launch/: outdated_tagslam_test.launch  outdated_zed_wrapper_cpu.launch  tagslam.launch  tagslam_test.launch  zed_sdk.launch  zed_sdk_launch.xml  zed_sdk_mapping.launch  zed_wrapper_cpu.launch  zed_wrapper_gpu.launch
launch/outdated/: outdated_zed_sdk_mapping.launch  outdated_zed_wrapper_gpu.launch
launch/unsupported/: unsupported_tagslam_launch.xml
msg/: AprilTagDetection.msg  AprilTagDetectionArray.msg
src/: tag_slam.cpp  tag_slam_zed.cpp  tagslam_ros_node.cpp  tagslam_ros_zed_node.cpp  test_node.cpp
src/backend/: backend.cpp  fixed_lag_backend.cpp  fixed_lag_backend_isam.cpp  isam2_backend.cpp
src/frontend/: tag_detector.cpp  tag_detector_cpu.cpp  tag_detector_cuda.cpp
src/unsupported/: unsupported_tag_slam.cpp  unsupported_tagslam_ros_node.cpp  unsupported_test_node.cpp
