<?xml version="1.0"?>
<package format="2">
  <name>tagslam_ros</name>
  <version>3.2.1</version>
  <description>
    TODO: Package description
  </description>

  <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>

  <author>TODO</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>apriltag</build_depend> -->
  <!-- <build_depend>gtsam</build_depend> -->
  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>


  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  
  <!-- <run_depend>gtsam</run_depend> -->
  <!-- <run_depend>apriltag</run_depend> -->

  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
